:sparkles: App.tsx 추가

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,15 +1,5 @@
 body {
-  background: black;
-}
-
-.file {
-  width: 400px;
-  height: 400px;
-  background: url('./assets/images/img_likeeat.png');
-}
-
-.url {
-  width: 400px;
-  height: 400px;
-  background: url('./assets/images/img_plie.png');
+  background: #353535;
+  color: blue;
+  font-size: 24px;
 }
