:bento: Noto Sans 폰트 파일 추가 및 적용

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -13,12 +13,15 @@ canvas, video {
   outline: 0;
   font: inherit;
   font-size: 1rem;
-  vertical-align: baseline; 
+  vertical-align: baseline;
 }
 
 body {
   line-height: 1;
   box-sizing: border-box;
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: normal;
 }
 
 ol,
@@ -43,4 +46,40 @@ input {
 *::before,
 *::after {
   box-sizing: inherit;
+}
+
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: 300;
+  src: url('assets/fonts/NotoSansKR-Light.woff2') format('woff2'),
+    url('assets/fonts/NotoSansKR-Light.woff') format('woff'),
+    url('assets/fonts/NotoSansKR-Light.otf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: normal;
+  src: url('assets/fonts/NotoSansKR-Regular.woff2') format('woff2'),
+    url('assets/fonts/NotoSansKR-Regular.woff') format('woff'),
+    url('assets/fonts/NotoSansKR-Regular.otf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: 500;
+  src: url('assets/fonts/NotoSansKR-Medium.woff2') format('woff2'),
+    url('assets/fonts/NotoSansKR-Medium.woff') format('woff'),
+    url('assets/fonts/NotoSansKR-Medium.otf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: bold;
+  src: url('assets/fonts/NotoSansKR-Bold.woff2') format('woff2'),
+    url('assets/fonts/NotoSansKR-Bold.woff') format('woff'),
+    url('assets/fonts/NotoSansKR-Bold.otf') format('truetype');
 }
