:lipstick: a tag reset 코드 수정

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -42,6 +42,13 @@ input {
   vertical-align: middle;
 }
 
+a,
+a:hover,
+a:active {
+  text-decoration: none;
+  color: black;
+}
+
 *,
 *::before,
 *::after {
